[gd_scene load_steps=9 format=3 uid="uid://djpmdo7844v3e"]

[ext_resource type="Texture2D" uid="uid://cqsy52841xtvq" path="res://Assets/Images/Background/DarkIntro.png" id="1_48xmf"]
[ext_resource type="Script" uid="uid://bnqpix8sm3wau" path="res://Screens/intro_screen.gd" id="1_bs5bn"]
[ext_resource type="Texture2D" uid="uid://bwbsjpbq4afax" path="res://Assets/Images/Background/HouseIntro.png" id="2_bs5bn"]
[ext_resource type="FontFile" uid="uid://cgxq0woteljiv" path="res://Assets/Fonts/alagard.ttf" id="4_8tax2"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8tax2"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(300, 10, 2)
emission_shape = 3
emission_box_extents = Vector3(600, 20, 1)
direction = Vector3(0, 1, 0)
spread = 20.0
initial_velocity_min = 80.0
initial_velocity_max = 150.0
angular_velocity_min = -30.000015
angular_velocity_max = 29.999983
gravity = Vector3(-180, 30, 0)
scale_min = 0.5
scale_max = 7.0

[sub_resource type="Animation" id="Animation_b0xcq"]
resource_name = "intro_sequence"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/SnowyOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.7, 8.6),
"transitions": PackedFloat32Array(3.4822018, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.9411765), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OverlayLayer/BlackOverlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06666668, 2.8333333),
"transitions": PackedFloat32Array(1, 2.9281719),
"update": 0,
"values": [Color(0, 0, 0.23529412, 1), Color(0, 0, 0.23529412, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OverlayLayer/SnowStormParticles:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4.5, 8.833333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(5.6666665, 8.866667),
"transitions": PackedFloat32Array(1, 2.2191386),
"update": 0,
"values": [Vector2(1, 1), Vector2(5, 5)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(5.7, 8.866667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 180), Vector2(313.945, 193.26)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_0noq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OverlayLayer/SnowyOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OverlayLayer/BlackOverlay:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("OverlayLayer/SnowStormParticles:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Camera2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 180)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cbuvi"]
_data = {
&"RESET": SubResource("Animation_0noq7"),
&"intro_sequence": SubResource("Animation_b0xcq")
}

[node name="IntroSequence" type="Node2D"]
script = ExtResource("1_bs5bn")

[node name="BackgroundL" type="CanvasLayer" parent="."]
layer = -1

[node name="DarkBg" type="TextureRect" parent="BackgroundL"]
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("1_48xmf")

[node name="NorthPoolBg" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 36.365)
position = Vector2(320, 180)
texture = ExtResource("2_bs5bn")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[node name="BlackOverlay" type="ColorRect" parent="OverlayLayer"]
offset_right = 642.0
offset_bottom = 359.0
color = Color(0, 0, 0.23529412, 1)

[node name="SnowStormParticles" type="GPUParticles2D" parent="OverlayLayer"]
position = Vector2(320, -50)
amount = 300
lifetime = 5.0
preprocess = 5.0
process_material = SubResource("ParticleProcessMaterial_8tax2")

[node name="SnowyOverlay" type="ColorRect" parent="OverlayLayer"]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0.69411767, 0.79607844, 0.99607843, 0.9137255)

[node name="StoryText" type="RichTextLabel" parent="OverlayLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -86.0
offset_right = 269.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/normal_font = ExtResource("4_8tax2")
theme_override_font_sizes/normal_font_size = 70
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="DifficultySelect" type="Control" parent="OverlayLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OverlayLayer/DifficultySelect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -152.0
offset_right = 159.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="OverlayLayer/DifficultySelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8tax2")
theme_override_font_sizes/font_size = 70
text = "Difficulty"

[node name="EasyBtn" type="Button" parent="OverlayLayer/DifficultySelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8tax2")
theme_override_font_sizes/font_size = 60
text = "1.12"

[node name="MediumBtn" type="Button" parent="OverlayLayer/DifficultySelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8tax2")
theme_override_font_sizes/font_size = 60
text = "20.12"

[node name="HardBtn" type="Button" parent="OverlayLayer/DifficultySelect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_8tax2")
theme_override_font_sizes/font_size = 60
text = "24.12"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_cbuvi")
}
